--- a/core/templates/partials/navbar.html
+++ b/core/templates/partials/navbar.html
@@ -12,7 +12,7 @@
   <div class="flex-none">
     {# notifications #}
     <div x-data="{
-            slideOverOpen: true
+            slideOverOpen: false
             }" class="relative z-50 w-auto h-auto">
         <button @click="slideOverOpen=true"
          class="btn btn-ghost btn-circle">
@@ -59,7 +59,7 @@
                       <div class="absolute inset-0 px-4 sm:px-5">
                         <div class="relative h-full overflow-hidden border border-dashed rounded-md border-neutral-300">
                           {% if all_notifications %}
-                            <h2 class="font-semibold text-lg my-3 px-4 py-2 rounded-full bg-base-300 w-fit mx-auto">{{all_notifications.count}} notification{{all_notifications.count|pluralize}}:</h2>
+                            <h2 class="font-semibold text-lg my-3 px-4 py-1 rounded-2xl bg-gray-100 dark:text-slate-700 w-fit mx-auto shadow-md"><span id="notif-indicator" class="font-bold">{{all_notifications.count}}</span>&nbsp;notification{{all_notifications.count|pluralize}} :</h2>
                           {% endif %}
                           {% for notification in all_notifications %}
                           <div id="notif" data-notification-id="{{ notification.id }}" class="relative bg-base-100 w-full border-b pl-4 pr-8 py-4 md:py-6 hover:bg-base-300 {% if forloop.last %}shadow-xl rounded-b-lg{% else %}border-b{% endif %}">
