new notif toggle feature

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -46,7 +46,8 @@
   </footer>
 
 </body>
-
+  <!-- JQuery -->
+  <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
   <!-- Theme change script (https://github.com/saadeghi/theme-change) -->
   <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>
   <!-- Alpine js scripts -->
