--- a/albums/templates/albums/album_detail.html
+++ b/albums/templates/albums/album_detail.html
@@ -150,7 +150,7 @@
 
     <br><br>
     <hr>
-    <div class="mt-10">
+    <div class="mt-10 flex gap-4">
       <a href="{% url 'albums:albums_view' %}" class="btn btn-neutral">
         <svg class="w-6 h-6 stroke-2 fill-current" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg">
           <path d="M224 480h640a32 32 0 1 1 0 64H224a32 32 0 0 1 0-64z"></path>
@@ -158,13 +158,17 @@
         </svg>
         Back
       </a>
+      <a href="{% url 'albums:album-access' album.pk %}" class="btn">
+        Album Settings
+      </a>
     </div>
   </div>
 
 
 </div>
+
+{% endblock body %}
+
 {% block javascript %}
   <script src="{% static 'albums/js/photo_display_method.js' %}"></script>
 {% endblock javascript %}
-
-{% endblock body %}
