--- a/albums/templates/albums/album_access.html
+++ b/albums/templates/albums/album_access.html
@@ -8,9 +8,9 @@
 
 <div class="bg-base-100">
   <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
-    <div class="prose">
+    <div>
       <h1 class="sr-only">Album settings</h1>
-      <h1>Album settings</h1>
+      <h1 class="text-3xl font-bold tracking-tight">Album settings</h1>
     </div>
 
     <section>
@@ -23,13 +23,43 @@
               <path d="M3 7C3 4.79086 4.79086 3 7 3H17C19.2091 3 21 4.79086 21 7V17C21 19.2091 19.2091 21 17 21H7C4.79086 21 3 19.2091 3 17V7Z"></path>
               <path d="M16.2739 11.1377C16.6644 10.7472 16.6644 10.114 16.2739 9.7235L14.4823 7.9319C14.0918 7.54137 13.4586 7.54138 13.0681 7.9319L8.96106 12.0389L8.34768 15.7477C8.3365 15.8154 8.39516 15.874 8.4628 15.8627L12.1669 15.2448L16.2739 11.1377Z"></path></svg>
           </div>
-          {% for field in album_form %}
+          {% for field in form %}
             <div class="block ">
               <label class="block text-sm font-medium mb-1" for="id_{{field.label}}">{{field.label|capfirst}}</label>
               {{field}}
             </div>
           {% endfor %}
-            <input type="submit" name="album_form" class="block btn btn-primary text-white" value="Save changes">
+
+          <table>
+            <thead>
+              <tr>
+                <th>User</th>
+                <th>Full Name</th>
+                <th>Avatar</th>
+                <th>Album Access</th>
+              </tr>
+            </thead>
+            <tbody>
+            {% for relation, relation_type in relations_dict.items %}
+              <tr>
+                <td>{{ relation.email }}</td>
+                <td>{{ relation.get_full_name }}</td>
+                <td>
+                  {% if relation.profile_picture %}
+                    {% thumbnail relation.profile_picture "50x50" crop="center" as im %}
+                    <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ relation.get_full_name }}">
+                    {% endthumbnail %}
+                    {% else %}
+                      <img src="https://api.dicebear.com/6.x/initials/svg?seed={% firstof relation.get_full_name relation.email %}" width="50" height="50" alt="" class="h-full w-full object-cover object-center group-hover:opacity-75">
+                    {% endif %}
+                </td>
+                <td><input type="checkbox" name="user_{{ relation.id }}" {% if relation in users_with_access %}checked{% endif %}></td>
+              </tr>
+            {% endfor %}
+            </tbody>
+          </table>
+
+            <button type="submit" name="album_form" class="block btn btn-primary text-white">Save changes</button>
         </div>
       </form>
 
